Fixed vertical spacing

--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ li a:hover:not(.current) {
     text-align: center;
 }
 
+#space {
+    padding: 5vh 1vw;
+}
+
 #value-proposition {
     text-align: center;
 }
@@ -91,7 +95,8 @@ li a:hover:not(.current) {
 
 #pitch {
     color: rgb(198, 154, 241);
-    font-size: 3vh;    
+    font-size: calc(10px + 1.5vh);
+
 }
 
 #benefits {
